Bugzilla bug 232958: checked in a new condition variable implementation contributed by Fredrik Holmqvist <thesuckiestemail@yahoo.com>. Modified Files: primpl.h btcvar.c